# cpp-mcp

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docs/mcp-code-walkthrough/: 00-reading-map.md  01-why-mcp-from-react-to-protocol.md  02-entities-host-client-server-in-this-repo.md  03-server-primitives-tools-resources-and-what-is-missing.md  04-client-features-and-current-gaps.md  05-data-layer-json-rpc-to-cpp-types.md  06-server-transport-and-session-lifecycle.md  07-clients-sse-stdio-streamable-http.md  08-examples-tests-and-extension-server.md  09-known-issues-and-reading-notes.md
docs/superpowers/plans/: 2026-05-15-mcp-code-walkthrough.md  2026-06-09-synology-nas-docker.md  2026-06-09-synology-nas-docker.md.tasks.json
docs/superpowers/specs/: 2026-05-15-mcp-code-walkthrough-design.md  2026-06-09-synology-nas-docker-design.md  2026-06-11-beast-server-runtime-design.md
examples/: CMakeLists.txt  agent_example.cpp  server_example.cpp  streamable_http_client_example.cpp
examples/synology-nas/: README.md
examples/synology-nas/backend/: .gitignore  README.md
examples/synology-nas/backend/src/synology_api_backend/: app.py  client.py  main.py  tools.py
examples/synology-nas/docker/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh
examples/synology-nas/scripts/: run-backend.sh  run-ext-server.sh  smoke-test.sh
ext/server/: CMakeLists.txt  README.md
ext/server/include/mcp_ext/: tool_api.h
ext/server/plugins/: calculator.cpp  plugin_helpers.h  synology_tools.cpp  todo  tool_api.h  weather.cpp  wsl_create_directory.cpp  wsl_list_distros.cpp  wsl_toolkit.cpp
ext/server/plugins/default/: calculator.cpp
ext/server/plugins/synology/: README.md  synology_tools.cpp
ext/server/plugins/synology/backend/: .env.example  pyproject.toml
ext/server/plugins/synology/backend/src/synology_api_backend/: __init__.py  concurrency.py  config.py
ext/server/plugins/synology/backend/tests/: test_backend.py
ext/server/plugins/synology/docker/: .env.example  Dockerfile  README.md  entrypoint.sh
ext/server/plugins/synology/scripts/: run-backend.sh  run-ext-server.sh
ext/server/plugins/wsl_tools/: wsl_common.h  wsl_create_directory.cpp  wsl_list_distros.cpp  wsl_recommend_cleanup.cpp  wsl_safe_delete.cpp  wsl_scan_files.cpp  wsl_scan_read.cpp  wsl_tools.cpp
ext/server/src/: main.cpp  plugin_loader.cpp  plugin_loader.h  plugin_registry.cpp  plugin_registry.h  wsl_resources.cpp  wsl_resources.h
include/: mcp_client.h  mcp_message.h  mcp_prompt.h  mcp_resource.h  mcp_server.h  mcp_stdio_client.h  mcp_streamable_http_client.h  mcp_tool.h
src/: CMakeLists.txt  mcp_message.cpp  mcp_resource.cpp  mcp_server.cpp  mcp_stdio_client.cpp  mcp_streamable_http_client.cpp  mcp_tool.cpp
test/: CMakeLists.txt  mcp_test.cpp  streamable_http_test.cpp
