[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synology-api-backend"
version = "0.1.0"
description = "HTTP tool backend for Synology DSM operations via N4S4/synology-api."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "starlette>=0.37.2,<1.0.0",
    "synology-api==0.9.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
synology-api-backend = "synology_api_backend.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/synology_api_backend"]
